--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="container row boxlayout xd">
 
                     <div class="col col-md-6 mt-5">
-                        <img src="keanu.jpg" alt="">
+                        <img src="cv3/keanu.jpg" alt="">
                     </div>
 
                     <div class="col col-md-6">
