--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <title>CV Luca Sain</title>
     <style>
+
+
+@font-face {
+	font-family: 'Conv_dealerplate_california';
+	src: url('fonts/dealerplate_california.eot');
+	src: local('☺'), url('fonts/dealerplate_california.woff') format('woff'), url('fonts/dealerplate_california.ttf') format('truetype'), url('fonts/dealerplate_california.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+        .logardo{
+            font-family:'Conv_dealerplate_california';
+        }
         .bannerLogo {
             padding-top: 10pt;
             height: 300px;
@@ -34,7 +46,7 @@
 <body style="background-color: yellow;" >
 
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-md-center">
-        <h1 class="col col-md-6">Luca Sain</h1>
+        <h1 class="col col-md-6 logardo">Luca Sain</h1>
 
         <!-- Cosas -->
         <ul class="navbar-nav">
