--- a/test-vertical.html
+++ b/test-vertical.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
       <h3>Header One</h3>
       <div class="content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        <p>penes.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat aliquam deserunt harum rem earum assumenda perspiciatis expedita. Aliquid distinctio tenetur fugiat qui recusandae obcaecati voluptates.</p>
       </div>
     </div>
