--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div>
         <div class="container">
             <section class="col col-md-12 bg-warning text-dark  ">
-                <div class="container row boxlayout xd">
+                <div class="row boxlayout xd">
 
                     <div class="col col-md-5 mt-5">
                         <img class="img-fluid" src="keanu.jpg" alt="">
@@ -156,7 +156,7 @@
 
 
                     <div class="col col-md-6">
-                        <div class="container row boxlayout">
+                        <div class="row boxlayout">
                             <div class=" card col col-md-1 bg-success test2">
                                 <h1 class="test card-text">2013-2018</h1>
                             </div>
@@ -172,7 +172,7 @@
                     </div>
 
                     <div class="col col-md-6">
-                        <div class="container row boxlayout">
+                        <div class="row boxlayout">
                             <div class=" card col col-md-1 bg-success test2">
                                 <h1 class="test card-text">2013-2018</h1>
                             </div>
@@ -200,9 +200,9 @@
 
                 <h2 class="mt-5">Educacion</h2>
 
-                <div class="container card-text row boxlayout mt-5">
+                <div class="card-text row boxlayout mt-5">
                     <div class="col col-md-6">
-                        <div class="container row boxlayout">
+                        <div class="row boxlayout">
 
                             <div class=" test2 col col-md-2 bg-success">
                                 <h1 class="test card-text">2013-2018</h1>
@@ -223,7 +223,7 @@
                         </div>
                     </div>
                     <div class="col col-md-6">
-                        <div class="container row boxlayout">
+                        <div class="row boxlayout">
 
                             <div class=" test2 col col-md-2 bg-success">
                                 <h1 class="test card-text">2013-2018</h1>
@@ -264,9 +264,9 @@
 
 
 
-                <div class="container  row boxlayout mt-5">
+                <div class="row boxlayout mt-5">
                     <div class="work_card col col-md-6">
-                        <div class="container row boxlayout">
+                        <div class="row boxlayout">
                             <div class="col col-md-8 bg-success">
                                 <img class="mt-3 mb-3img-fluid" src="panorama.png" alt="">
                                 <p class="">Some informarion about your position</p>
@@ -276,7 +276,7 @@
                             </div>
                         </div>
 
-                        <div class="container row boxlayout">
+                        <div class="row boxlayout">
                             <div class="col col-md-12 bg-secondary">
                                 <p class="">Voluptatem tenetur occaecati aut eaque quasi ea rerum quisquam. Incidunt
                                     nemo veniam eum
@@ -288,7 +288,7 @@
                         </div>
                     </div>
                     <div class="work_card col col-md-6">
-                        <div class="container row boxlayout">
+                        <div class="row boxlayout">
                             <div class="col col-md-8 bg-success">
                                 <img class="mt-3 mb-3img-fluid" src="Boehringer_Ingelheim_Logo.svg" alt="">
                                 <p class="">Some informarion about your position</p>
@@ -298,7 +298,7 @@
                             </div>
                         </div>
 
-                        <div class="container row boxlayout">
+                        <div class="row boxlayout">
                             <div class="col col-md-12 bg-secondary">
                                 <p class="">Voluptatem tenetur occaecati aut eaque quasi ea rerum quisquam. Incidunt
                                     nemo veniam eum
