--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="school-card.css">
     <link rel="stylesheet" href="work-cards.css">
 
-
     <title>CV Luca Sain</title>
     <style>
         .bannerLogo {
@@ -29,7 +28,6 @@
         footer {
             background-color: gray;
             margin-bottom: 0rem !important;
-
         }
 
         footer p {
@@ -41,6 +39,9 @@
 </head>
 
 <body style="background-color: yellow;">
+    <!--
+        <div class="container">
+    -->
 
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-md-center">
         <h1 class="col col-md-6">Luca Sain</h1>
@@ -67,7 +68,7 @@
 
     <div class="bannerLogo bg-success">
         <section class="row justify-content-md-center seccionPortada">
-            <div class="col col-md-4">
+            <div class="col">
                 <img class="mx-auto d-block rounded-circle"
                     src="https://a12.t26.net/taringa/avatares/F/B/6/1/6/A/lukaneco/120x120_F79.jpg" alt="lukaneco">
                 <h1 class="text-center">
@@ -78,179 +79,152 @@
                 </h2>
 
                 <!--
-                    https://stackoverflow.com/questions/10989238/center-image-horizontally-within-a-div
-                -->
+                        https://stackoverflow.com/questions/10989238/center-image-horizontally-within-a-div
+                    -->
             </div>
         </section>
     </div>
 
     <div>
         <div class="container">
-            <section class="col col-md-12 bg-warning text-dark  ">
-                <div class="row boxlayout xd">
+            <section class="col col-md-12 bg-warning text-dark">
 
-                    <div class="col col-md-5 mt-5">
-                        <img class="img-fluid" src="keanu.jpg" alt="">
-                    </div>
+                <!--#############################################################################################-->
 
-                    <div class="col col-md-7">
-                        <h2>Acerca de mi</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, potenti facilisi pulvinar quis
-                            conubia vestibulum tempus, dictum per non curabitur aptent parturient. Torquent cum praesent
-                            dui in commodo class nec tincidunt mus varius fermentum quam, auctor gravida massa rutrum
-                            proin mauris ultrices faucibus nisi consequat scelerisque.</p>
-
-                        <div class="jumbotron">
-                            <h2>Datos Personales</h2>
-                            <p class="lead"></p>
-
-                            <ul class="lead">
-                                <li>Nombre: Luca Abdul Sain</li>
-                                <li>Edad: 19</li>
-                                <li>DNI: 42455993</li>
-                                <li>Direccion: Aranguren 2976</li>
-
-                            </ul>
-
-                            <p class="lead row justify-content-around">
-                                <a class="btn btn-primary btn-lg" href="#" role="button">Descargar CV</a>
-                                <a class="btn btn-primary btn-lg" href="#" role="button">Contacto</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <section class="col col-md-12 mt-5 bg-warning text-dark row justify-content-around ">
-                <h2>Educacion</h2>
-                <!--
-
-                <div class="container row boxlayout">
-
-                    <div class="col col-md-6">
-                        <div class="container row boxlayout">
-                            <div class="col col-md-2 bg-success test2">
-                                <h1 class="test">2018</h1>
+                <div class=" pb-4 xd">
+                    <br>
+                    <div class="" id="">
+                        <h3 class="display-4 text-center mt-5 mb-5" id="">
+                            Acerca de mi
+                        </h3>
+                        <div class="row d-flex">
+                            <div class="col-md-4 p-3">
+                                <a href="">
+                                    <img class="rounded" src="keanu.jpg" alt="" style="max-width: 100%;" />
+                                </a>
                             </div>
-                            <div class="col col-md-8 bg-danger">
-                                <h1>Hola, soy el lado derecho</h1>
-                            </div>
-                        </div>
-                    </div>
 
-                    <div class="col col-md-6">
-                        <div class="container row boxlayout">
-                            <div class="col col-md-2 bg-success test2">
-                                <h1 class="test">2018</h1>
-                            </div>
-                            <div class="col col-md-8 bg-danger">
-                                <h1>Hola, soy el lado derecho</h1>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                -->
-
-                <div class="container row boxlayout mt-5 mb-5">
+                            <div class="col-md-8 wow animated bounceInLeft Nunito box3" data-wow-delay="1.4s">
+                                <div class="row paddingFila">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, potenti facilisi pulvinar
+                                        quis
+                                        conubia vestibulum tempus, dictum per non curabitur aptent parturient. Torquent
+                                        cum
+                                        praesent
+                                        dui in commodo class nec tincidunt mus varius fermentum quam, auctor gravida
+                                        massa
+                                        rutrum
+                                        proin mauris ultrices faucibus nisi consequat scelerisque.</p>
+                                </div>
+                                <!--################################-->
 
 
-                    <div class="col col-md-6">
-                        <div class="row boxlayout">
-                            <div class=" card col col-md-1 bg-success test2">
-                                <h1 class="test card-text">2013-2018</h1>
-                            </div>
-                            <div class="card col col-md-8 bg-danger">
-                                <div class="card-body">
-                                    <h5 class="card-title">School Name</h5>
-                                    <p class="card-text">
-                                        Some data of this school
+                                <div class="" id="">
+
+                                    <h3 class="text-center" id="">
+                                        Datos Personales
+                                    </h3>
+
+                                    <div class="row d-flex text-center">
+                                        <div class="col-md-6 col-sm-12">
+                                            <!--style="background-color: yellow;"-->
+
+                                            <ul class="lead">
+                                                <li>Nombre: Luca Abdul Sain</li>
+                                                <li>Edad: 19</li>
+                                                <li>DNI: 42455993</li>
+                                                <li>Direccion: Aranguren 2976</li>
+
+                                            </ul>
+                                        </div>
+
+                                        <div class="col-md-6 col-sm-12">
+                                            <!--style="background-color: yellow;"-->
+                                            <ul class="lead">
+                                                <li>blablabla</li>
+                                                <li>blablabla</li>
+                                                <li>blablabla</li>
+                                                <li>blablabla</li>
+
+                                            </ul>
+                                        </div>
+
+                                    </div>
+                                    <p class="lead row justify-content-around text-center">
+                                        <a class="btn btn-primary btn-lg" href="pornhub.com" role="button">Descargar
+                                            CV</a>
+                                        <a class="btn btn-primary btn-lg" href="#" role="button">Contacto</a>
                                     </p>
                                 </div>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col col-md-6">
-                        <div class="row boxlayout">
-                            <div class=" card col col-md-1 bg-success test2">
-                                <h1 class="test card-text">2013-2018</h1>
-                            </div>
-                            <div class="card col col-md-8 bg-danger">
-                                <div class="card-body">
-                                    <h5 class="card-title">School Name</h5>
-                                    <p class="card-text">
-                                        Some data of this school
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                    <!--#############################################################################################-->
+
             </section>
-
-
 
             <!--
-                ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-            -->
+                    ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+                -->
 
 
-            <section class="col col-md-12 mt-5 pb-5 bg-warning text-dark row justify-content-around ">
 
-                <h2 class="mt-5">Educacion</h2>
+            <section class="col col-md-12 mt-5 pb-5 bg-warning text-dark">
+                <h2 class="pt-5 text-center">Educacion</h2>
 
-                <div class="card-text row boxlayout mt-5">
-                    <div class="col col-md-6">
+
+
+                <div class="container row boxlayout justify-content-around">
+
+                    <div class="col-sm-10 col-md-5 mt-5 pb-5 ">
                         <div class="row boxlayout">
 
-                            <div class=" test2 col col-md-2 bg-success">
+                            <div class=" test2 col-sm-2 col-md-2 bg-success">
                                 <h1 class="test card-text">2013-2018</h1>
                             </div>
 
-                            <div class="col col-md-10 bg-dark">
-                                <div class="row bg-danger">
-                                    <h2>
+                            <div class="col-sm-10 col-md-10 bg-dark">
+                                <div class=" bg-danger">
+                                    <h3>
                                         School Name
-                                    </h2>
+                                    </h3>
                                 </div>
-                                <div class="row bg-secondary">
-                                    <h2>
+                                <div class="bg-secondary">
+                                    <p>
                                         Some data of this school
-                                    </h2>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col col-md-6">
-                        <div class="row boxlayout">
-
-                            <div class=" test2 col col-md-2 bg-success">
-                                <h1 class="test card-text">2013-2018</h1>
-                            </div>
-
-                            <div class="col col-md-10 bg-dark">
-                                <div class="row bg-danger">
-                                    <h2>
-                                        School Name
-                                    </h2>
-                                </div>
-                                <div class="row bg-secondary">
-                                    <h2>
-                                        Some data of this school
-                                    </h2>
+                                    </p>
                                 </div>
                             </div>
                         </div>
                     </div>
 
+                    <div class="col-md-5 col-sm-10 mt-5 pb-5 ">
+                        <div class="row boxlayout">
 
+                            <div class=" test2 col-md-2 col-sm-2 bg-success">
+                                <h1 class="test card-text">2013-2018</h1>
+                            </div>
 
-
+                            <div class="col-md-10 col-sm-10 bg-dark">
+                                <div class=" bg-danger">
+                                    <h3>
+                                        School Name
+                                    </h3>
+                                </div>
+                                <div class="bg-secondary">
+                                    <p>
+                                        Some data of this school
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
 
             </section>
+
 
 
 
@@ -259,19 +233,29 @@
                 -->
 
 
-            <section class="col col-md-12 mt-5 pb-5 bg-warning text-dark row justify-content-around ">
-                <h2 class="mt-5">Experiencia Laboral</h2>
 
 
 
-                <div class="row boxlayout mt-5">
-                    <div class="work_card col col-md-6">
+            <section class="col-md-12 mt-5 pb-5 bg-warning text-dark">
+                <h2 class="pt-5 text-center">Experiencia Laboral</h2>
+
+
+
+                <div class="row boxlayout justify-content-around">
+                    <div class="work_card
+                                col-sm-10	
+                                col-md-5
+                                pt-5 pb-5">
                         <div class="row boxlayout">
-                            <div class="col col-md-8 bg-success">
+                            <div class="col-md-12
+                                                col-lg-8
+                                                bg-success">
                                 <img class="mt-3 mb-3img-fluid" src="panorama.png" alt="">
                                 <p class="">Some informarion about your position</p>
                             </div>
-                            <div class="col col-md-4 bg-danger">
+                            <div class="col-md-12	
+                                                col-lg-4	
+                                                bg-danger">
                                 <p>1999 - 1999</p>
                             </div>
                         </div>
@@ -287,13 +271,29 @@
                             </div>
                         </div>
                     </div>
-                    <div class="work_card col col-md-6">
+
+                    <div class="work_card
+                    col-sm-10	
+                    col-md-5
+                    pt-5 pb-5">
                         <div class="row boxlayout">
-                            <div class="col col-md-8 bg-success">
+                            <div class="col 
+                                    col-sm-12
+                                    col-md-12
+                                    col-lg-8
+                                    col-xl-8
+                                    bg-success">
                                 <img class="mt-3 mb-3img-fluid" src="Boehringer_Ingelheim_Logo.svg" alt="">
                                 <p class="">Some informarion about your position</p>
                             </div>
-                            <div class="col col-md-4 bg-danger">
+                            <div class=" 
+                                                col
+                                                col-12
+                                                col-sm-12	
+                                                col-md-12	
+                                                col-lg-4	
+                                                col-xl-4
+                                                bg-danger">
                                 <p>1999 - 1999</p>
                             </div>
                         </div>
@@ -309,6 +309,7 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
 
             </section>
@@ -317,14 +318,8 @@
 
 
             <!--
-                ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-            -->
-
-
-
-
-
-
+                        ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+                    -->
 
 
 
@@ -343,6 +338,16 @@
         <p>Lukaneco, Todos Los Derechos Reservados 2019</p>
 
     </footer>
+
+
+
+
+
+
+    <!--
+        </div>
+    -->
+
 </body>
 
 </html>
