--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
 
 
-                <div class="container row boxlayout justify-content-around">
+                <div class="row boxlayout justify-content-around">
 
                     <div class="col-sm-10 col-md-5 mt-5 pb-5 ">
                         <div class="row boxlayout">
