--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             margin-bottom: 0rem !important;
 
         }
+        .navbar_gg{
+            padding-left: 74%!important;
+        }
     </style>
 </head>
 
@@ -42,28 +45,32 @@
     <!--
         <div class="container">
     -->
-
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-md-center">
+    <nav class="navbar bg-dark navbar-dark justify-content-md-center">
         <h1 class="col col-md-6">Luca Sain</h1>
 
         <!-- Cosas -->
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Cosa1</a>
-            </li>
 
-            <li class="nav-item">
-                <a class="nav-link" href="#">Cosa2</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Cosa3</a>
-            </li>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav navbar_gg">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Cosa1</a>
+                </li>
 
-            <li class="nav-item">
-                <a class="nav-link" href="#">Cosa4</a>
-            </li>
-        </ul>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Cosa2</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Cosa3</a>
+                </li>
 
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Cosa4</a>
+                </li>
+            </ul>
+        </div>
     </nav>
 
     <div class="bannerLogo bg-success">
